first integration of all the components, fixed position for the different components on mobile and desktop

--- a/client/src/styles/Footer.scss
+++ b/client/src/styles/Footer.scss
@@ -1,6 +1,5 @@
 .footer {
   border-radius: 15px 15px 0 0;
-  bottom: 0;
   width: 100%;
   background: linear-gradient(90deg, #04adbf, #04bfbf, #025959);
   color: #fff;
