--- a/client/src/styles/RecommandedSection.scss
+++ b/client/src/styles/RecommandedSection.scss
@@ -16,7 +16,6 @@ $secondary-font: "Quicksand", sans-serif;
 
 body {
   font-family: "Quicksand", sans-serif;
-  height: 100vh;
 }
 
 h3 {
@@ -24,14 +23,22 @@ h3 {
   font-size: 1.5rem;
 }
 
+.white {
+  color: white;
+}
+
 /*Le carroussel*/
 .recommended__section {
-  margin: 2rem;
+  position: relative;
+  top: -70px;
+  margin: 0 2rem;
   .recommended__carousel {
     display: flex;
     gap: 1.5rem;
     scroll-behavior: smooth;
-    overflow-y: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
+    width: 100%;
   }
 }
 
@@ -118,6 +125,7 @@ h4 {
 
   .recommended__section {
     margin: 1rem 7rem;
+    position: static;
   }
 
   .recommended__carousel {
