--- a/client/src/styles/SectionPopular.scss
+++ b/client/src/styles/SectionPopular.scss
@@ -22,6 +22,7 @@ body {
 h3 {
   font-family: $primary-font;
   font-size: 1.5rem;
+  color: black;
 }
 
 h4 {
@@ -29,7 +30,7 @@ h4 {
 }
 
 .popular__section {
-  margin: 2rem;
+  margin: 0rem 2rem 2rem;
   box-sizing: border-box;
 }
 .PopularContainer {
@@ -102,6 +103,7 @@ h4 {
 
   .popular__section {
     margin: 1rem 7rem;
+    position: static;
   }
 
   .popular_list {
